apps/bases/podinfo/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
spec:
  parentRefs:
  - namespace: networking
    name: damascus
    sectionName: https-tld
  rules:
  - backendRefs:
    - name: podinfo
      port: 9898
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    matches:
    - path:
        type: PathPrefix
        value: /podinfo
